--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </style>
 <body>
 <img src = "img/shave.jpg">
-  <p>this is the begining of my website</p>
+  <p>this is erduins temp thing</p>
   
 </body>
 </html>
