--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </style>
 <body>
 <img src = "img/shave.jpg">
-    <a href="https://erduin17.github.io/build.html/">Visit our HTML tutorial</a> 
+    <a href="https://erduin17.github.io/build.html/">My build</a> 
   
 </body>
 </html>
