--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <style>
 </style>
 <body>
-<img src = "img/shave.jpg">
-    <a href="https://erduin17.github.io/build.html/">My build</a> 
-  
+ <a href="https://github.com/erduin17/erduin17.github.io/blob/master/build.html">
+  <img src="/img/shave.jpgf" alt="shave" style="width:42px;height:42px;border:0;">
+</a> 
 </body>
 </html>
