--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <style>
 </style>
 <body>
- <a href="/erduin17/erduin17.github.io/build.html">
-  <img src="/img/shave.jpg" alt="shave" style="width:42px;height:42px;border:0;">
+ <a href="/build.html">
+  <img src="/img/shave.jpg" alt="shave"">
 </a> 
 </body>
 </html>
