--- a/build.html
+++ b/build.html
@@ -37,7 +37,7 @@ COMPUTER PARTS - F LAST
 $1000 Computer
 $ 69.99 MSI - B350 PC MATE ATX AM4 Motherboard
 $ 329.99 AMD - Ryzen 7 2700X 3.7 GHz 8-Core Processor
-$ 0 AMD CPU fan
+$ 0 AMD CPU fan that comes with my CPU
 $ 77.99 Samsung - 970 Evo 250 GB M.2-2280 Solid State Drive
 $ 58.89 Seagate - Barracuda 2 TB 3.5" 7200RPM Internal Hard Drive
 $ 95.88 EVGA - SuperNOVA G3 650 W 80+ Gold Certified Fully-Modular ATX Power Supply
