--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
           <a href="https://github.com/erduin17">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://twitter.com/dolandark">
+          <a href="https://twitter.com/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="https://www.youtube.com/watch?v=V-_O7nl0Ii0">
+          <a href="https://www.youtube.com/">
             <i class="fab fa-youtube"></i>
           </a>
           <a href="http://10.183.1.21/">
