--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="Tri-Tech-advantage-or-disadvantage">
       <div class="w-100">
         <h2 class="mb-5">Tri-Tech-advantage-or-disadvantage</h2>
-        <p>fill</p>
+        <p>Tri-tech will give me an advantage when going in to college to study computer science. I will know some of the basic vocabulary, topics, and methods. I got a lot of experience working in cyber security this year it helped me figure out that I would like a job in this field. But I'm not sure exactly what I want to do. The only disadvantage for me was that I moved in the morning and my home school requires me to take the bus to get to Tri-Tech. And I live 30 minutes from the bus stop and the bus stop is 30 minutes from Tri-Tech. Other than that, I didn’t feel like Tri-Tech had any disadvantages. </p>
       </div>
     </section>
 
