--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h1 class="mb-0">Erduin
           <span class="text-primary">Macias</span>
         </h1>
-        <div class="subheading mb-5">42 Wallaby Way, Sydney · (315) 194-6020 ·
+        <div class="subheading mb-5">
           <a href="mailto:erduinmacias.cs@gmail.com">erduinmacias.cs@gmail.com</a>
         </div>
         <p class="lead mb-5">Hi I’m Erduin Macias, I am a student at Prosser High School and to Tri-Tech Skills Center. I wish to one day be able to make this world a better place with everything that I have learned and everything I will learn. Because to me a smile makes all the hard work worth it. </p>
