--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#Tri-Tech-advantage-or-disadvantage">Tri-Tech-advantage-or-disadvantage</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#Final-Project">Final-Project</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -89,7 +92,7 @@
           <a href="https://www.youtube.com/">
             <i class="fab fa-youtube"></i>
           </a>
-          <a href="http://10.183.1.21/">
+          <a href="/project.html">
             <i class="fab fa-delicious"></i>
           </a>
           </a>
@@ -165,6 +168,26 @@
     </section>
 
   </div>
+
+  <hr class="m-0">
+
+  <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="Final-Project">
+    <div class="w-100">
+      <h2 class="mb-5">Final-Project</h2>
+      <p>For my end of year project I worked with devon on His final project of installing a new firmware on a router </p>
+      <p>Devon and I tried to get over the initial hurdle of installing the firmware on to the router. After a while of scratching our heads we got a hint from Mr. Coleman that our static Ips from the class network is what didnt let us access the router</p>
+      <p>After changeing our IP's we were able to access the router and install the firmware.</p>
+      <img src="img/ip.png" alt="Italian Trulli">
+      <p>I logged in to the router and set up the wireless network. I then logged in to the router from my phone</p>
+      <img src="img/login.png" alt="">
+      <img src="img/wifi-create.png" alt="">
+      <img src="img/phone1.jpg" alt="">
+      <p>and now have i have access to the class network through my phone</p>
+      <img src="img/phone2.jpg" alt="">
+    </div>
+  </section>
+
+</div>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
